# c3tr-translator-launcher

./: index.html  package-lock.json  package.json
doc/: worklog.md
src/: App.tsx  ServerLauncher.tsx  TabPanel.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/downloader/: C3trClientDownloader.tsx  ModelDownloader.tsx  ServerDownloader.tsx
src/launcher/: ClientLauncher.tsx  ServerLauncher.tsx
