[package]
name = "llama-translator"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "llama_translator_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = [] }

[dependencies]
tauri = { version = "2.0.0-rc", features = [] }
tauri-plugin-shell = "2.0.0-rc"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2.0.0-rc.6"
tauri-plugin-fs = "2.0.0-rc.4"
shlex = "1.3.0"
tauri-plugin-store = "2.0.0-rc.3"
reqwest = { version = "0.12.7", features = ["blocking"] }
octocrab = "0.39.0"
zip = "2.2.0"
indicatif = "0.17.8"
tokio = { version = "1.40.0", features = ["full"] }
futures-util = "0.3.30"

